--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -631,7 +631,7 @@ color: #555555;
 }
 
 .btn:hover{
-background-color: none;
+background-color: none !important;
 }
 
 .footer-input-border{
@@ -649,5 +649,150 @@ color: #FFFFFF;
 }
 
 .ft-bottom-bg{
-  background: #27AE60;
+background: #27AE60;
+}
+
+.bread-crumb{
+background-color: #292929 !important;
+}
+
+.nav-team-bg{
+background-color: #292929 !important;
+}
+
+.team-menu-color{
+color: #FFFFFF;
+}
+
+.team-bread-line{
+border: solid 2px orange;
+width: 5%;
+}
+
+.breadcrumb-team-text{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 46px;
+color: #FFFFFF;
+}
+
+.bread-team-text-left{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 26px;
+color: #EC8E11;
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.bread-text-padding{
+padding-top: 130px !important;
+padding-bottom: 50px;
+}
+
+.bread-text-padding-down{
+padding-top: 10px !important;
+padding-bottom: 20px;
+}
+
+.team-cards-title{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 20px;
+display: flex;
+align-items: center;
+text-align: center;
+color: #27AE60;
+}
+
+.team-cards-text{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 22px;
+line-height: 28px;
+text-align: center;
+color: #292929;
+}
+
+.our-team-box-1{
+padding-top: 150px;
+}
+
+.our-team-box-right-title{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 46px;
+color: #292929;
+text-align: left;
+}
+
+.bg-our-team-box-right{
+background: #F5F5F5;
+padding: 150px;
+
+}
+
+.team-box-line{
+border: solid 2px orange;
+width: 10%;
+margin-left: 15px;
+}
+
+.our-team-box-right-text{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 26px;
+color: #555555;
+}
+
+.down-box-bg-left{
+background: #D9D9D9;
+}
+
+.bg-our-team-down-title{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 26px;
+color: #EC8E11;
+}
+
+
+.bg-our-team-down-text-1{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 46px;
+color: #FFFFFF;
+}
+
+.our-team-left-bg{
+  background-image: url("/assets/img/our-team-box.png");
+  background-position: right;
+  background-repeat: no-repeat;
+  background-position-y: top;
+  background-color: #27AE60;  
+}
+
+.our-team-bg-box-1{
+  background-color: #D9D9D9;
+}
+
+.box-width-our-team{
+width: 612px !important;
+right: 12px;
 }
