--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 
-
 .menu-donate-text{
 background: #27AE60;
 padding: 10px 20px;
@@ -901,12 +900,12 @@ color: #555555;
 }
 
 .contact-line{
-  border: solid 2px orange;
+border: solid 2px orange;
 width: 12%;
 }
 
 .contact-form-title{
-  font-family: 'Poppins';
+font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
 font-size: 27px;
@@ -915,7 +914,7 @@ color: #292929;
 }
 
 .contact-input-title{
-  font-family: 'Poppins';
+font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -925,14 +924,13 @@ color: #292929;
 }
 
 .contact-input-border{
-  border: 1px solid #DDDDDD;
+border: 1px solid #DDDDDD;
 border-radius: 5px;
 }
 
 .input-msg-padding{
-  padding: 70px 140px;
+padding: 70px 140px;
 }
-
 
 .contact-input-shadow{
 background: #FFFFFF;
@@ -949,17 +947,97 @@ width: 75%;
 }
 
 .contact-form-position{
-  position: relative;
-  top: 50px;
-  z-index: 1;
+position: relative;
+top: 50px;
+z-index: 1;
 }
 
 .contact-form-down-bg{
-  z-index: -99 !important;
+z-index: -99 !important;
 }
 
 .bg-contact{
-  background: #D9D9D9;
-  height: 500px;
+background: #D9D9D9;
+height: 500px;
 z-index: -99;
+}
+
+.faq-section{
+padding-top: 150px;
+
+}
+
+.faq-title-sec-1{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 26px;
+text-align: center;
+color: #27AE60;
+}
+
+.faq-title-sec-2{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 46px;
+text-align: center;
+color: #292929;
+}
+
+.faq-line-title{
+border: 1px solid orange;
+width: 5%;
+}
+
+.faq-title-sec-text{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 26px;
+text-align: center;
+color: #555555;
+}
+
+.faq-list-green{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 26px;
+color: #292929;
+}
+
+.faq-content{
+  padding-top: 120px;
+}
+
+.faq-content-sup-title{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 30px;
+line-height: 37px;
+color: #292929;
+}
+
+.faq-content-title{
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 30px;
+line-height: 37px;
+color: #292929;
+}
+
+.faq-content-icon-title{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 26px;
+color: #292929;
 }
