--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1041,3 +1041,44 @@ font-size: 18px;
 line-height: 26px;
 color: #292929;
 }
+
+.faq-bg-accordion{
+  background-color: #EC8E11;
+  border-radius: 15px !important;
+  margin-bottom: 10px !important;
+}
+
+.faq-help-green-title{
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 26px;
+text-align: center;
+color: #27AE60;
+}
+
+.faq-help-title{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 46px;
+text-align: center;
+color: #FFFFFF;
+}
+
+
+.faq-help-btn-green{
+    background:#27AE60;
+    border-radius: 5px;
+    height: 58px;
+    width: 193px;
+    
+}
+
+.faq-help-us{
+  background-color: #292929;
+  padding: 130px;
+  margin-top: 150px;
+}
